@@ -1,4 +1,5 @@
-3/7/12 delete "photon view" feature, representation can't handle the range [62302], [62303]
+3/7/12 Beers: rename "solid beam" to "beam" throughout, since there's only one representation now
+3/7/12 Beers: delete "photon view" feature, representation can't handle the range [62302], [62303]
 # 0.00.17 (62294) Mar 7, 2012
 3/7/12 Concentration: new color scheme from JC
 3/7/12 restore wavelength control
